[package]
name = "rdeptree"
version = "0.0.3"
authors = ["Gregory Stepanov <grrstepanov@gmail.com>"]
categories = ["command-line-utilities"]
description = "simple python project dependencies explorer"
keywords = ["python", "dependencies", "viewer", "dependency viewer"]
readme = "README.md"
edition = "2021"

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
regex = "1.11.1"
